# reachy-remix-deploy

./: .gitignore  README.md  index.html  pyproject.toml  style.css
reachy_mini_remix/: __init__.py  __main__.py  app.py  main.py
reachy_remix/: __init__.py  __main__.py  app.py
reachy_remix/static/: index.html
