[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "reachy-mini-remix"
version = "0.1.0"
description = "Motion builder for Reachy Mini - Build dance sequences with tap-to-add blocks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini>=1.1.2",
    "gradio>=4.0.0",
]
keywords = ["reachy-mini-app", "dance", "motion-builder", "kids"]

[project.entry-points."reachy_mini_apps"]
reachy-mini-remix = "reachy_mini_remix.main:ReachyMiniRemix"

[tool.setuptools.packages.find]
where = ["."]
include = ["reachy_mini_remix*"]

[tool.setuptools.package-data]
reachy_mini_remix = ["static/*", "static/**/*"]
